<resources>
    <string name="app_name">GpsSpeedometer</string>
    <string name="dummy_button">Settings</string>
    <string name="dummy_content">Hello\nWorld!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_reflection_mode">Reflection mode</string>
    <string name="pref_description_reflection_mode">Mirrors hud, for projecting onto windshield</string>

    <string name="pref_title_display_trip_distance">Display trip distance</string>
    <string name="pref_description_display_trip_distance">Trip distance resets after closing the app</string>

    <string name="pref_title_display_trip_time">Display trip time</string>
    <string name="pref_description_display_trip_time">Trip timer resets after closing the app</string>

    <string name="pref_title_display_distance">Display distance</string>
    <string name="pref_description_display_distance">All time distance</string>

    <string name="pref_title_display_time">Display clock</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_clock_format">Clock format</string>
    <string-array name="pref_clock_format">
        <item>24h</item>
        <item>12h</item>
    </string-array>
    <string-array name="pref_clock_format_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_display_units">Unit system</string>
    <string-array name="pref_unit_system">
        <item>Metric</item>
        <item>Retarded</item>
    </string-array>
    <string-array name="pref_unit_system_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
