<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <SwitchPreference
        android:defaultValue="false"
        android:key="reflection_mode"
        android:summary="@string/pref_description_reflection_mode"
        android:title="@string/pref_title_reflection_mode" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="display_trip_distance"
        android:summary="@string/pref_description_display_trip_distance"
        android:title="@string/pref_title_display_trip_distance" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="display_trip_time"
        android:summary="@string/pref_description_display_trip_time"
        android:title="@string/pref_title_display_trip_time" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="display_distance"
        android:summary="@string/pref_description_display_distance"
        android:title="@string/pref_title_display_distance" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:title="@string/pref_title_display_time" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_clock_format"
        android:entryValues="@array/pref_clock_format_values"
        android:key="unit_system"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_clock_format" />

    <!--<EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_unit_system"
        android:entryValues="@array/pref_unit_system_values"
        android:key="unit_system"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_display_units" />

</PreferenceScreen>
